package edu.hitsz.item.ObserverDemo;

public interface BombSubscriber {
    void bombUpdate();
}
